--- a/src/Graphs3D/Graphs3D.csproj
+++ b/src/Graphs3D/Graphs3D.csproj
@@ -15,8 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="shaders\display.frag" />
-    <EmbeddedResource Include="shaders\display.vert" />
+    <EmbeddedResource Include="shaders\edges.frag" />
+    <EmbeddedResource Include="shaders\edges.vert" />
+    <EmbeddedResource Include="shaders\nodes.frag" />
+    <EmbeddedResource Include="shaders\nodes.vert" />
     <EmbeddedResource Include="shaders\tiling_bin.comp" />
     <EmbeddedResource Include="shaders\tiling_count.comp" />
     <EmbeddedResource Include="shaders\solver.comp" />
