--- a/src/Graphs3D/Graphs3D.csproj
+++ b/src/Graphs3D/Graphs3D.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="shaders\image.frag" />
+    <EmbeddedResource Include="shaders\image.vert" />
     <EmbeddedResource Include="shaders\edges.frag" />
     <EmbeddedResource Include="shaders\edges.vert" />
     <EmbeddedResource Include="shaders\nodes.frag" />
