--- a/src/Graphs3D/Graphs3D.csproj
+++ b/src/Graphs3D/Graphs3D.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="maps\sokoban1.txt" />
     <EmbeddedResource Include="shaders\image.frag" />
     <EmbeddedResource Include="shaders\image.vert" />
     <EmbeddedResource Include="shaders\edges.frag" />
