--- a/src/Graphs3D/Graphs3D.csproj
+++ b/src/Graphs3D/Graphs3D.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="maps\sokoban4.txt" />
     <EmbeddedResource Include="maps\sokoban3.txt" />
     <EmbeddedResource Include="maps\sokoban2.txt" />
     <EmbeddedResource Include="maps\sokoban1.txt" />
