--- a/src/Graphs3D/Graphs3D.csproj
+++ b/src/Graphs3D/Graphs3D.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="maps\sokoban-classic2.txt" />
     <EmbeddedResource Include="maps\sokoban-classic1.txt" />
     <EmbeddedResource Include="maps\sokoban-easy.txt" />
     <EmbeddedResource Include="maps\sokoban-test2.txt" />
