--- a/src/Graphs3D/Graphs3D.csproj
+++ b/src/Graphs3D/Graphs3D.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="maps\sokoban-jr4.txt" />
+    <EmbeddedResource Include="maps\sokoban-jr3.txt" />
+    <EmbeddedResource Include="maps\sokoban-jr2.txt" />
+    <EmbeddedResource Include="maps\sokoban-classic2a.txt" />
     <EmbeddedResource Include="maps\sokoban-classic2.txt" />
     <EmbeddedResource Include="maps\sokoban-classic1.txt" />
     <EmbeddedResource Include="maps\sokoban-easy.txt" />
