sliders for fodDensity and unhighlighted alpha

--- a/src/Graphs3D/Graphs3D.csproj
+++ b/src/Graphs3D/Graphs3D.csproj
@@ -18,6 +18,7 @@
     <EmbeddedResource Include="maps\bloxorz-flat.txt" />
     <EmbeddedResource Include="maps\bloxorz-custom.txt" />
     <EmbeddedResource Include="maps\klotski-canon.txt" />
+    <EmbeddedResource Include="maps\klotski-sliding2.txt" />
     <EmbeddedResource Include="maps\klotski-sliding.txt" />
     <EmbeddedResource Include="maps\klotski-test.txt" />
     <EmbeddedResource Include="maps\bloxorz3.txt" />
